# ToEnjoy

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: auth.py  chat.py  doctor.py  kb.py  mcp.py  patient.py  registration.py  report.py  search.py  voice.py
backend/app/db/: chroma.py  redis.py  session.py
backend/app/middleware/: auth.py  identity_router.py
backend/app/models/: __init__.py  care_plan.py  conversation.py  doctor.py  medical_record.py  patient.py  registration.py  user.py
backend/app/schemas/: agent.py  auth.py  chat.py  common.py  doctor.py  mcp.py  medical_record.py  patient.py  registration.py  report.py  search.py  voice.py
backend/scripts/: clear_seed_data.py  reindex_all.py  seed_data.py  test_mcp_and_kb.py  verify_kb.py
backend/tests/: conftest.py
backend/tests/api/: conftest.py  test_auth.py  test_chat.py  test_chat_history.py  test_doctor.py  test_mcp.py  test_patient.py  test_report.py  test_search.py  test_voice.py
backend/tests/async_unit/: conftest.py  test_adapter_registry.py  test_doubao_client.py  test_long_term.py  test_mcp_identity.py  test_mcp_patient_record.py  test_mcp_registry.py  test_memory_service.py  test_ocr.py  test_orchestrator.py  test_query_processor.py  test_react_engine.py  test_response_gen.py  test_tool_router.py
backend/tests/unit/: test_adaptive_router.py  test_bm25_index.py  test_citation.py  test_event_extractor.py  test_jwt.py  test_mcp_base.py  test_mcp_schemas.py  test_memory_reader.py  test_schemas.py  (+2 more)
(+119 files in other folders)
